[package]
name    = "imfile"
version = "0.1.1"
edition = "2021"
license = "MIT"

description = "A simple and customizable file dialog for imgui-rs written entirely in Rust.  Fork with Trevor's Changes"
authors     = [ "Aggelos Tselios <aggelostselios777@gmail.com>", "Trevor Merritt <trevor.merritt@gmail.com>" ]
repository  = "https://github.com/tseli0s/imfile"
keywords    = [
    "imgui",
    "dialog",
    "gui",
    "file"
]

[dependencies]
log   = "0.4"
winit = { version = "0.30", features = ["x11", "mint"] }
imgui-glium-renderer = { version = "0.12.0" }
imgui-winit-support = { version = "0.12.0" }
glium = { version = "0.34.0", default-features = true }
image = { version = "0.23", optional = true }
imgui = { version = "0.12.0", features = ["tables-api"] }
copypasta = { version = "0.10.1" }

[dev-dependencies]
env_logger          = "0.11.5"
error-iter          = "0.4"
imgui               = "0.12.0"
imgui-winit-support = "0.12.0"
pixels              = "0.13.0"
winit               = "0.30"
winit_input_helper  = "0.16.0"

[dev-dependencies.imgui-wgpu]
git = "https://github.com/Yatekii/imgui-wgpu-rs.git"
